--- a/index.html
+++ b/index.html
@@ -1,25 +1,151 @@
 <!DOCTYPE html>
 <html>
-    <!-- this is the HEAD ------------->
-    <head>
 
-        <!-- google fonts -->
+<!-------------------- this is the HEAD ------------------------->
+<head>
 
-        <!-- gridlex stylesheet -->
+    <!-- google fonts -->
 
-        <!-- custom CSS -->
+    <!-- gridlex stylesheet -->
 
-    </head>
+    <!-- custom CSS -->
 
-    <!-- this is the BODY ------------->
-    <body>
-        <!----------- header ---------->
-        <header>
+</head>
 
-        </header>
-        <!----------- footer ---------->
-        <footer>
+<!-------------------- this is the BODY -------------------------->
+<body>
+    <!----------- header --------------------------->
+    <header class="grid">
+        <div class="col-5">
+            <h1>The Design Collective.</h1>
+        </div>
+        <nav class="col-7">
+            <a href="#why-us">Why Us</a>
+            <a href="#services">Services</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+        </nav>
 
-        </footer>
-    </body>
+    </header>
+
+    <!---------- header banner --------------------->
+
+    <!----------- Newsletter CtA ------------------->
+    <section>
+        <p> Sign up to our newsletter to access free design resources >> </p>
+    </section>
+
+    <!----------- Why Choose Us icon grid ---------->
+    <section class="grid" id="why-us">
+        <div class="col-12">
+            <h2>Why Choose Us</h2>
+        </div>
+        <!-- col 1 -->
+        <div class="col-3">
+            <img src="/images/icons/flash.png">
+            <h4> Lightning Fast</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti voluptate aute, voluptatum quos vel. </p>
+        </div>
+
+        <!-- col 2 -->
+        <div>
+            <img src="/images/icons/idea-2.svg">
+            <h4> Strategic Perspective</h4>
+            <p>Quidem officia neque quia magni, rem et. Accusamus, veritatis quaerat eligendi omnis officiis eaque? Perspiciatis!</p>
+        </div>
+
+        <!-- col 3 -->
+        <div>
+            <img src="/images/icons/seo-tag.png">
+            <h4> Optimized for Google/h4>
+            <p>Veniam obcaecati porro earum iusto, officia fuga quae possimus, fugiat illum reprehenderit deserunt.</p>
+        </div>
+
+        <!-- col 4 -->
+        <div>
+            <img src="/images/icons/dollar.svg">
+            <h4> Modern E-Commerce</h4>
+            <p>Lorem ipsum dolor consectetur adipisicing elit. Quis libero quod voluptatibus vel eos expedita.</p>
+        </div>
+    </section>
+    <!----------- image grid ----------------------->
+    <section class="grid">
+        <div class="col-7 bg-image">
+
+        </div>
+        <div class="col-5">
+            <h2>More than just another agency.</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. In animi quae, ipsam consequuntur accusantium placeat ab beatae totam facilis rem, quia eos ipsa dolore voluptatibus quas consectetur consequatur sequi dolorum.</p>
+            <p>Dolor sit amet consectetur, adipisicing elit. Ut assumenda dolor possimus incidunt placeat optio veritatis, ipsam distinctio officia, earum quos soluta sed tempora.</p>
+        </div>
+    </section>
+    
+    <!----------- Facebook CtA --------------------->
+    <section class="grid-center">
+        <h3>We have a community of over 3500 entrepreneurs.</h3>
+        <a href="'" class="button">Join the Facebook-Community</a>
+    </section>
+
+    <!----------- Our Services --------------------->
+    <section class="grid">
+        <!-- our services banner -->
+        <div class="col-12-right bg-image">
+            <h2>Our Services</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus consequuntur alias aut tempore explicabo soluta similique sint, labore quam quas impedit accusamus molestiae sit dolor nisi aperiam, at quaerat quis?</p>
+        </div>
+        <!-- design build seo -->
+        <div class="col-4">
+            <h3>Design.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae sequi repellendus vero officia praesentium sit consequuntur, harum id hic excepturi commodi, vitae minus neque dolore at illum nam libero necessitatibus.</p>
+        </div>
+        <div class="col-4">
+            <h3>Build.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae sequi repellendus vero officia praesentium sit consequuntur, harum id hic excepturi commodi, vitae minus neque dolore at illum nam libero necessitatibus.</p>
+        </div>
+        <div class="col-4">
+            <h3>SEO.</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae sequi repellendus vero officia praesentium sit consequuntur, harum id hic excepturi commodi, vitae minus neque dolore at illum nam libero necessitatibus.</p>
+        </div>
+    </section>
+
+    <!----------- Recent Projects Grid ------------->
+    <section class="grid">
+        <div class="col-12-middle center">
+            <h2>Recent Projects</h2>
+        </div>
+        <div class="col-6">
+            <h3>Zen Studio Website</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa accusantium inventore et? Tempora veniam ut, nihil cupiditate, molestias quae labore dolorem earum, aliquam dolor eum similique tempore. Dolores, nemo dolorem.</p>
+            <a href="#" class="button">Go to Site</a>
+        </div>
+        <div class="col-6 bg-image"></div>
+        <div class="col-6 bg-image"></div>
+        <div class="col-6">
+            <h3>Another Website</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa accusantium inventore et? Tempora veniam ut, nihil cupiditate, molestias quae labore dolorem earum, aliquam dolor eum similique tempore. Dolores, nemo dolorem.</p>
+            <a href="#" class="button">Go to Site</a>
+        </div>
+    </section>
+
+    <!----------- footer ---------->
+    <footer class="grid">
+        <div class="col-7">
+            <h2>The Design Collective</h2>
+            <h3>Web Design & Development</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat cumque et suscipit laboriosam quia.</p>
+        </div>
+        <div class="col-5">
+            <h3>Let's Connect.</h3>
+            <a href="#">Pinterest</a>
+            <a href="#">Instagram</a>
+            <a href="#">Facebook</a>
+            <a href="#">X.com</a>
+        </div>
+        <div class="col-12 copyright">
+            <p>Copyright 2024</p>
+        </div>
+    </footer>
+
+</body>
+
 </html>
