--- a/index.html
+++ b/index.html
@@ -57,28 +57,28 @@
             <h2>Why Choose Us</h2>
         </div>
         <!-- col 1 -->
-        <div class="col-3">
+        <div class="col-3_sm-6_xs-12">
             <img src="/images/icons/flash.png">
             <h4> Lightning Fast</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti voluptate aute, voluptatum quos vel. </p>
         </div>
 
         <!-- col 2 -->
-        <div class="col-3">
+        <div class="col-3_sm-6_xs-12">
             <img src="/images/icons/idea-2.svg">
             <h4> Strategic Perspective</h4>
             <p>Quidem officia neque quia magni, rem et. Accusamus, veritatis quaerat eligendi omnis officiis eaque? Perspiciatis!</p>
         </div>
 
         <!-- col 3 -->
-        <div class="col-3">
+        <div class="col-3_sm-6_xs-12">
             <img src="/images/icons/seo-tag.png">
             <h4> Optimized for Google</h4>
             <p>Veniam obcaecati porro earum iusto, officia fuga quae possimus, fugiat illum reprehenderit deserunt.</p>
         </div>
 
         <!-- col 4 -->
-        <div class="col-3">
+        <div class="col-3_sm-6_xs-12">
             <img src="/images/icons/dollar.svg">
             <h4> Modern E-Commerce</h4>
             <p>Lorem ipsum dolor consectetur adipisicing elit. Quis libero quod voluptatibus vel eos expedita.</p>
