FINISHED single website

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </section>
     <!----------- Newsletter CtA ------------------->
     <section class="center bg-dark light-text padded">
-        <p> Sign up to our newsletter to access free design resources >> </p>
+        <a href="#" class="button"> Sign up to our newsletter to access free design resources >> </a>
     </section>
 
     <!----------- Why Choose Us icon grid ---------->
@@ -58,28 +58,28 @@
         </div>
         <!-- col 1 -->
         <div class="col-3_sm-6_xs-12">
-            <img src="/images/icons/flash.png">
+            <img src="/images/icons/flash.png" alt="flash Icon">
             <h4> Lightning Fast</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti voluptate aute, voluptatum quos vel. </p>
         </div>
 
         <!-- col 2 -->
         <div class="col-3_sm-6_xs-12">
-            <img src="/images/icons/idea-2.svg">
+            <img src="/images/icons/idea-2.svg" alt="Idea Icon">
             <h4> Strategic Perspective</h4>
             <p>Quidem officia neque quia magni, rem et. Accusamus, veritatis quaerat eligendi omnis officiis eaque? Perspiciatis!</p>
         </div>
 
         <!-- col 3 -->
         <div class="col-3_sm-6_xs-12">
-            <img src="/images/icons/seo-tag.png">
+            <img src="/images/icons/seo-tag.png" alt="SEO Tag Icon">
             <h4> Optimized for Google</h4>
             <p>Veniam obcaecati porro earum iusto, officia fuga quae possimus, fugiat illum reprehenderit deserunt.</p>
         </div>
 
         <!-- col 4 -->
         <div class="col-3_sm-6_xs-12">
-            <img src="/images/icons/dollar.svg">
+            <img src="/images/icons/dollar.svg" alt="Dollar Icon">
             <h4> Modern E-Commerce</h4>
             <p>Lorem ipsum dolor consectetur adipisicing elit. Quis libero quod voluptatibus vel eos expedita.</p>
         </div>
